--- a/Automation/Automation.App/Views/ServersPages/WorkerMainPage.xaml
+++ b/Automation/Automation.App/Views/ServersPages/WorkerMainPage.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="Automation.App.Views.WorkersPages.WorkerMainPage"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Automation.App.Views.WorkersPages"
-             mc:Ignorable="d">
-    <Grid>
+﻿<UserControl
+    x:Class="Automation.App.Views.WorkersPages.WorkerMainPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Automation.App.Views.WorkersPages"
+    mc:Ignorable="d">
+    <Grid Margin="2">
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
@@ -13,7 +14,10 @@
         <GroupBox Header="Status">
             <TextBlock>List of workers with status, available slots and last task status</TextBlock>
         </GroupBox>
-        <GroupBox Margin="0,2,0,0" Grid.Row="1" Header="Scheduler">
+        <GroupBox
+            Margin="0,2,0,0"
+            Grid.Row="1"
+            Header="Scheduler">
             <TextBlock>Show all tasks scheduled for all servers.</TextBlock>
         </GroupBox>
     </Grid>
