--- a/Automation/Automation.App/Components/Display/SelectIconModal.xaml
+++ b/Automation/Automation.App/Components/Display/SelectIconModal.xaml
@@ -2,57 +2,87 @@
     x:Class="Automation.App.Components.Display.SelectIconModal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Components.Display"
-    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
-    mc:Ignorable="d"
-    MinHeight="200"
+    xmlns:local="clr-namespace:Automation.App.Components.Display"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:Name="ContainerElement"
     MinWidth="400"
-    x:Name="ContainerElement">
+    MinHeight="200"
+    mc:Ignorable="d">
     <Grid DataContext="{Binding ElementName=ContainerElement}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition />
+            <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="auto" />
-            </Grid.ColumnDefinitions>
-            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged, Delay=300}" />
-            <fonts:Icon
-                Margin="8,0"
-                HorizontalAlignment="Right"
-                Text="{x:Static fonts:IconFont.MagnifyingGlass}"
-                Foreground="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}" />
+
+        <Grid Margin="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+                <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged, Delay=300}" />
+                <fonts:Icon
+                    Margin="8,0"
+                    HorizontalAlignment="Right"
+                    Foreground="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}"
+                    Text="{x:Static fonts:IconFont.MagnifyingGlass}" />
+            </Grid>
+
+            <ListView
+                Grid.Row="1"
+                Height="500"
+                Margin="0,2,0,0"
+                ItemsSource="{Binding IconsView}"
+                SelectedItem="{Binding Selected}"
+                SelectionChanged="ListBox_SelectionChanged">
+                <ListView.View>
+                    <GridView>
+                        <GridView.ColumnHeaderContainerStyle>
+                            <Style TargetType="GridViewColumnHeader">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                            </Style>
+                        </GridView.ColumnHeaderContainerStyle>
+                        <GridViewColumn Width="48">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <fonts:Icon Text="{Binding Icon}" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+
+                        </GridViewColumn>
+                        <GridViewColumn>
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Name}" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+
         </Grid>
 
-        <ListBox ItemsSource="{Binding IconsView}" Margin="0,2,0,0">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        <fonts:Icon Text="{Binding Icon}" />
-                        <TextBlock Text="{Binding BindingGroupName}" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-
         <Border
+            Grid.Row="1"
             Margin="0,2,0,0"
             Padding="2"
-            Grid.Row="2"
             Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}">
             <Button
-                adonisExtensions:LayerExtension.Layer="2"
-                Command="{Binding SelectCommand}"
+                Padding="20,4"
                 HorizontalAlignment="Right"
-                Padding="20,4">
+                adonisExtensions:LayerExtension.Layer="2"
+                Command="{Binding SelectCommand}">
                 Select
             </Button>
         </Border>
