--- a/Automation/Automation.App/Components/Inputs/SelectIconModal.xaml
+++ b/Automation/Automation.App/Components/Inputs/SelectIconModal.xaml
@@ -1,12 +1,12 @@
 ﻿<UserControl
-    x:Class="Automation.App.Components.Display.SelectIconModal"
+    x:Class="Automation.App.Components.Inputs.SelectIconModal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
-    xmlns:local="clr-namespace:Automation.App.Components.Display"
+    xmlns:local="clr-namespace:Automation.App.Components.Inputs"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     x:Name="ContainerElement"
     MinWidth="400"
