--- a/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedContextMenu.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedContextMenu.xaml
@@ -28,17 +28,17 @@
         </MenuItem.Icon>
         <MenuItem Header="Add scope" Command="{Binding AddScopeCommand}">
             <MenuItem.Icon>
-                <components:NodeIcon Type="Scope" Margin="0,0,4,0" />
+                <fonts:Icon Text="{x:Static fonts:IconFont.Folder}" Margin="0,0,4,0" />
             </MenuItem.Icon>
         </MenuItem>
         <MenuItem Header="Add workflow" Command="{Binding AddWorkflowCommand}">
             <MenuItem.Icon>
-                <components:NodeIcon Type="Workflow" Margin="0,0,4,0" />
+                <fonts:Icon Text="{x:Static fonts:IconFont.Cubes}" Margin="0,0,4,0" />
             </MenuItem.Icon>
         </MenuItem>
         <MenuItem Header="Add task" Command="{Binding AddTaskCommand}">
             <MenuItem.Icon>
-                <components:NodeIcon Type="Task" Margin="0,0,4,0" />
+                <fonts:Icon Text="{x:Static fonts:IconFont.Cube}" Margin="0,0,4,0" />
             </MenuItem.Icon>
         </MenuItem>
     </MenuItem>
