--- a/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelectorModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelectorModal.xaml
@@ -35,7 +35,7 @@
             <ListBox.ItemTemplate>
                 <DataTemplate DataType="{x:Type viewmodels:ScopedElement}">
                     <StackPanel Orientation="Horizontal">
-                        <components:NodeIcon Type="{Binding Type}" Margin="0,0,4,0" />
+                        <components:ScopedIcon Scoped="{Binding}" Margin="0,0,4,0" />
                         <TextBlock Text="{Binding Name}" />
                     </StackPanel>
                 </DataTemplate>
