--- a/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedBreadcrumb.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedBreadcrumb.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Scopes.Components"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
+    xmlns:components="clr-namespace:Automation.App.Views.WorkPages.Components"
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -23,24 +24,17 @@
                         Text="{x:Static fonts:IconFont.ChevronRight}"
                         FontSize="8"
                         VerticalAlignment="Center"
-                        Margin="4,0">
-                        <fonts:Icon.Style>
-                            <Style TargetType="{x:Type fonts:Icon}" BasedOn="{StaticResource {x:Type fonts:Icon}}">
-                                <Style.Triggers>
-                                    <DataTrigger Binding="{Binding Id}" Value="00000000-0000-0000-0000-000000000001">
-                                        <Setter Property="Visibility" Value="Collapsed" />
-                                    </DataTrigger>
-                                </Style.Triggers>
-                            </Style>
-                        </fonts:Icon.Style>
-                    </fonts:Icon>
+                        Margin="4,0" />
                     <Button
                         Background="Transparent"
                         BorderThickness="0"
                         Padding="0"
                         Cursor="Hand"
                         Click="ButtonScope_Click">
-                        <TextBlock Text="{Binding Name}" />
+                        <StackPanel Orientation="Horizontal">
+                            <components:ScopedIcon Metadata="{Binding Metadata}" Margin="0,0,4,0" />
+                            <TextBlock Text="{Binding Metadata.Name}" />
+                        </StackPanel>
                     </Button>
                 </StackPanel>
             </DataTemplate>
