--- a/Automation/Automation.App/App.xaml
+++ b/Automation/Automation.App/App.xaml
@@ -8,7 +8,8 @@
     xmlns:workComponents="clr-namespace:Automation.App.Views.WorkPages.Components"
     xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
     xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
-    xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared">
+    xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
+    xmlns:jouffluConverters="clr-namespace:Joufflu.Shared.Converters;assembly=Joufflu.Shared">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -24,6 +25,9 @@
 
             <converters:EnumToListConverter x:Key="EnumToListConverter" />
             <converters:EnumToBooleanConverter x:Key="EnumToBooleanConverter" />
+
+            <jouffluConverters:BooleanConverter x:Key="BooleanConverter" />
+            <jouffluConverters:BooleanFlipConverter x:Key="BooleanFlipConverter" />
 
             <!--  Adonis customization  -->
             <CornerRadius x:Key="{x:Static adonisUi:Dimensions.CornerRadius}">2</CornerRadius>
